# ggkg-idf

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
doc/: console.md  console_yue-hk.md  console_zh-cn.md  console_zh_hk.md  http_api.md  http_api_yue-hk.md  http_api_zh-cn.md  http_api_zh_hk.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  camera.c  camera.h  camera_pins.h  cmd_ggkg.c  config.c  config.h  config_keys.h  config_vars.c  config_vars.h  fota.c  fota.h  htdocs.h  idf_component.yml  network.c  network.h  ra_filter.c  ra_filter.h  webserv_cam.c  webserv_cam.h  webserv_servo.c  webserv_servo.h  webserv_sys.c  webserv_sys.h  webserver.c  webserver.h
res/: README.md  index.html
utils/: gen_htdocs.py
